--- a/Analyze-NYC-TLC-Green-Car.ipynb
+++ b/Analyze-NYC-TLC-Green-Car.ipynb
@@ -2719,12 +2719,7 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2770,12 +2765,7 @@
   {
    "cell_type": "code",
    "execution_count": 133,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2858,16 +2848,347 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>passenger_count</th>\n",
+       "      <th>count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>322882</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>11655</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>4821052</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>413245</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>76511</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   passenger_count    count\n",
+       "0              NaN   322882\n",
+       "1              0.0    11655\n",
+       "2              1.0  4821052\n",
+       "3              2.0   413245\n",
+       "4              3.0    76511"
+      ]
+     },
+     "execution_count": 140,
+     "metadata": {},
+     "output_type": "execute_result"
     }
-   },
+   ],
+   "source": [
+    "df_q3_short = pd.read_sql_query('SELECT passenger_count, count(*) as count \\\n",
+    "                                    FROM table_record \\\n",
+    "                                    WHERE trip_distance < 30 \\\n",
+    "                                    GROUP BY passenger_count', nyc_database)\n",
+    "df_q3_short.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>passenger_count</th>\n",
+       "      <th>AVG_trip_distance</th>\n",
+       "      <th>count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>33.098780</td>\n",
+       "      <td>500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>42.783333</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>38.000927</td>\n",
+       "      <td>3062</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>35.289415</td>\n",
+       "      <td>410</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>36.839556</td>\n",
+       "      <td>90</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   passenger_count  AVG_trip_distance  count\n",
+       "0              NaN          33.098780    500\n",
+       "1              0.0          42.783333      3\n",
+       "2              1.0          38.000927   3062\n",
+       "3              2.0          35.289415    410\n",
+       "4              3.0          36.839556     90"
+      ]
+     },
+     "execution_count": 141,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_q3_long = pd.read_sql_query('SELECT passenger_count, avg(trip_distance) AS AVG_trip_distance, count(*) as count \\\n",
+    "                                    FROM table_record \\\n",
+    "                                    WHERE trip_distance >= 30 \\\n",
+    "                                    GROUP BY passenger_count', nyc_database)\n",
+    "df_q3_long.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>passenger_count</th>\n",
+       "      <th>count_short</th>\n",
+       "      <th>short trips</th>\n",
+       "      <th>AVG_trip_distance</th>\n",
+       "      <th>count_long</th>\n",
+       "      <th>long trips</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>322882</td>\n",
+       "      <td>0.054487</td>\n",
+       "      <td>33.098780</td>\n",
+       "      <td>500</td>\n",
+       "      <td>0.118540</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>11655</td>\n",
+       "      <td>0.001967</td>\n",
+       "      <td>42.783333</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.000711</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>4821052</td>\n",
+       "      <td>0.813564</td>\n",
+       "      <td>38.000927</td>\n",
+       "      <td>3062</td>\n",
+       "      <td>0.725936</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>413245</td>\n",
+       "      <td>0.069736</td>\n",
+       "      <td>35.289415</td>\n",
+       "      <td>410</td>\n",
+       "      <td>0.097202</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>76511</td>\n",
+       "      <td>0.012911</td>\n",
+       "      <td>36.839556</td>\n",
+       "      <td>90</td>\n",
+       "      <td>0.021337</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>4.0</td>\n",
+       "      <td>28686</td>\n",
+       "      <td>0.004841</td>\n",
+       "      <td>47.551754</td>\n",
+       "      <td>57</td>\n",
+       "      <td>0.013514</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>163429</td>\n",
+       "      <td>0.027579</td>\n",
+       "      <td>35.869254</td>\n",
+       "      <td>67</td>\n",
+       "      <td>0.015884</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>6.0</td>\n",
+       "      <td>88138</td>\n",
+       "      <td>0.014874</td>\n",
+       "      <td>39.939615</td>\n",
+       "      <td>26</td>\n",
+       "      <td>0.006164</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>8.0</td>\n",
+       "      <td>122</td>\n",
+       "      <td>0.000021</td>\n",
+       "      <td>39.080000</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.000474</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>9.0</td>\n",
+       "      <td>34</td>\n",
+       "      <td>0.000006</td>\n",
+       "      <td>38.450000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.000237</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   passenger_count  count_short  short trips  AVG_trip_distance  count_long  \\\n",
+       "0              NaN       322882     0.054487          33.098780         500   \n",
+       "1              0.0        11655     0.001967          42.783333           3   \n",
+       "2              1.0      4821052     0.813564          38.000927        3062   \n",
+       "3              2.0       413245     0.069736          35.289415         410   \n",
+       "4              3.0        76511     0.012911          36.839556          90   \n",
+       "5              4.0        28686     0.004841          47.551754          57   \n",
+       "6              5.0       163429     0.027579          35.869254          67   \n",
+       "7              6.0        88138     0.014874          39.939615          26   \n",
+       "8              8.0          122     0.000021          39.080000           2   \n",
+       "9              9.0           34     0.000006          38.450000           1   \n",
+       "\n",
+       "   long trips  \n",
+       "0    0.118540  \n",
+       "1    0.000711  \n",
+       "2    0.725936  \n",
+       "3    0.097202  \n",
+       "4    0.021337  \n",
+       "5    0.013514  \n",
+       "6    0.015884  \n",
+       "7    0.006164  \n",
+       "8    0.000474  \n",
+       "9    0.000237  "
+      ]
+     },
+     "execution_count": 154,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "df_q3 = df_q3_short.merge(df_q3_long, on='passenger_count', suffixes=[\"_short\", \"_long\"]).rename(columns={\"proportion_short\":\"short trips\", \"proportion_long\":\"long trips\"}) \n",
+    "df_q3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "def diff_short_long_trip_on(attr, rpr=\"count\", kind='bar'):\n",
+    "def diff_short_long_trip_on(attr, kind='bar'):\n",
     "    df_q3_short = pd.read_sql_query('SELECT '+attr+', count(*) as count \\\n",
     "                                    FROM table_record \\\n",
     "                                    WHERE trip_distance < 30 \\\n",
@@ -2876,28 +3197,22 @@
     "                                    FROM table_record \\\n",
     "                                    WHERE trip_distance >= 30 \\\n",
     "                                    GROUP BY '+attr, nyc_database)\n",
-    "    if rpr == \"proportion\":\n",
-    "        s = np.sum(df_q3_short['count'].values)\n",
-    "        df_q3_short['proportion'] = [float(x)/s for x in df_q3_short['count']]\n",
-    "        s = np.sum(df_q3_long['count'].values)\n",
-    "        df_q3_long['proportion'] = [float(x)/s for x in df_q3_long['count']]\n",
+    "    s = np.sum(df_q3_short['count'].values)\n",
+    "    df_q3_short['proportion'] = [float(x)/s for x in df_q3_short['count']]\n",
+    "    s = np.sum(df_q3_long['count'].values)\n",
+    "    df_q3_long['proportion'] = [float(x)/s for x in df_q3_long['count']]\n",
     "    \n",
     "    df_q3 = df_q3_short.merge(df_q3_long, on=attr, suffixes=[\"_short\", \"_long\"]) \\\n",
-    "                        .rename(columns={rpr+\"_short\":\"short trips\", rpr+\"_long\":\"long trips\"}) \n",
+    "                        .rename(columns={\"proportion_short\":\"short trips\", \"proportion_long\":\"long trips\"}) \n",
     "    ax = df_q3.plot(x=attr, y=['short trips', 'long trips'], kind=kind, figsize=(15,5))\n",
-    "    ax.set_ylabel(rpr)\n",
+    "    ax.set_ylabel('proportion')\n",
     "    ax.set_title(attr.replace(\"_\", \" \")+\" difference in short/long trip\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "execution_count": 146,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2938,7 +3253,7 @@
    ],
    "source": [
     "for attr in [\"passenger_count\", \"RatecodeID\", \"payment_type\"]:\n",
-    "    diff_short_long_trip_on(attr, rpr=\"proportion\", kind='bar')"
+    "    diff_short_long_trip_on(attr, kind='bar')"
    ]
   },
   {
