--- a/ETL-with-spark_3.ipynb
+++ b/ETL-with-spark_3.ipynb
@@ -159,13 +159,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e7852649e8dd4d60ae8ee809de094dad",
+       "model_id": "f9446a8c3dac477f817c888436d99ee1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -567,13 +567,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "70f86dfc0da24e749700367493212bc7",
+       "model_id": "a153b04ea5864ac2ae82565cba44ecbf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -643,7 +643,7 @@
     "# df = df.withColumnRenamed('VendorID', 'vendor_id')\n",
     "\n",
     "# rename passenger_count to pcount shortly\n",
-    "df = df.withColumnRenamed('passenger_count', 'p_count')\n",
+    "df = df.withColumnRenamed('passenger_count', 'p_count').withColumn('p_count',f.col('p_count').cast(IntegerType())) \n",
     "\n",
     "# df.show(10)\n",
     "\n",
@@ -794,13 +794,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "81d37222061a4d45834b2941d1bc2c87",
+       "model_id": "92a952c9bbc94813b4504f5837ae691d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3867,13 +3867,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
-   "metadata": {},
+   "execution_count": 192,
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "976b39dbc51a4528b73f07a1a8afea15",
+       "model_id": "a103580f63cc49719ae53657c5f879dc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3902,12 +3907,374 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(<shapefile.Shape object at 0x7f5cb56ca240>, Record #2: [3, 0.0843411059012, 0.000314414156821, 'Allerton/Pelham Gardens', 3, 'Bronx'])"
+      "root\n",
+      " |-- VendorID: string (nullable = true)\n",
+      " |-- lpep_pickup_datetime: string (nullable = true)\n",
+      " |-- lpep_dropoff_datetime: string (nullable = true)\n",
+      " |-- RatecodeID: string (nullable = true)\n",
+      " |-- PULocationID: string (nullable = true)\n",
+      " |-- DOLocationID: string (nullable = true)\n",
+      " |-- p_count: integer (nullable = true)\n",
+      " |-- trip_distance: double (nullable = true)\n",
+      " |-- fare_amount: string (nullable = true)\n",
+      " |-- extra: string (nullable = true)\n",
+      " |-- mta_tax: string (nullable = true)\n",
+      " |-- tip_amount: string (nullable = true)\n",
+      " |-- tolls_amount: string (nullable = true)\n",
+      " |-- improvement_surcharge: string (nullable = true)\n",
+      " |-- total_amount: string (nullable = true)\n",
+      " |-- payment_type: string (nullable = true)\n",
+      " |-- trip_type: string (nullable = true)\n",
+      " |-- pickup_hour: integer (nullable = true)\n",
+      " |-- dropoff_hour: integer (nullable = true)\n",
+      " |-- duration: long (nullable = true)\n",
+      " |-- minute_rate: double (nullable = true)\n",
+      " |-- average_speed: double (nullable = true)"
      ]
     }
    ],
    "source": [
-    "sf.shapeRecords()[2].shape,sf.shapeRecords()[2].record"
+    "# this exploring more \n",
+    "df.printSchema()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 239,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "488690b19f064359869852da6a9231fb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FloatProgress(value=0.0, bar_style='info', description='Progress:', layout=Layout(height='25px', width='50%'),…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------+---------------+----------------+\n",
+      "|p_count|long_trip_count|av_trip_distance|\n",
+      "+-------+---------------+----------------+\n",
+      "|      1|           3061|         38.0022|\n",
+      "|      6|             26|         39.9396|\n",
+      "|      3|             90|         36.8396|\n",
+      "|      5|             67|         35.8693|\n",
+      "|      9|              1|           38.45|\n",
+      "|      4|             57|         47.5518|\n",
+      "|      8|              2|           39.08|\n",
+      "|      2|            410|         35.2894|\n",
+      "|      0|              3|         42.7833|\n",
+      "+-------+---------------+----------------+"
+     ]
+    }
+   ],
+   "source": [
+    "#handle short trip \n",
+    "#.where(f.col('p_count') >=1 ) \\\n",
+    "df_short_trips_group_merged = df.where(f.col('trip_distance') < 30 ).where(f.col('trip_distance') > 0) \\\n",
+    "        .select('p_count') \\\n",
+    "        .groupBy('p_count') \\\n",
+    "        .count() \\\n",
+    "        .withColumnRenamed('count','short_trip_count') \\\n",
+    "#        .withColumn('short_trip_proportion',f.col('short_trip_count')/f.sum('short_trip_count'))\n",
+    "\n",
+    "df_sum_short_trip = df_short_trips_group_merged.sum(short_trip_count)\n",
+    "\n",
+    "\n",
+    "#hndle long trip\n",
+    "# filter target trip and begain to handle long trip\n",
+    "df_long_trips_groups = df.where(f.col('trip_distance') >= 30 ).select('p_count','trip_distance') \n",
+    "\n",
+    "## get long trip\n",
+    "df_long_trips_groups_count =df_long_trips_groups.groupBy('p_count').count().withColumnRenamed('count','long_trip_count')\n",
+    "\n",
+    "## handle  average value \n",
+    "df_long_trips_groups_avg =df_long_trips_groups.groupBy('p_count').avg('trip_distance') \\\n",
+    "    .withColumnRenamed('avg(trip_distance)','av_trip_distance') \\\n",
+    "    .withColumn('av_trip_distance', f.round(f.col('av_trip_distance'),4)) \\\n",
+    "\n",
+    "#df_long_trips_group_passenger_count.show(5)\n",
+    "#df_long_trips_groups_avg.show(5)\n",
+    "\n",
+    "# merge tables\n",
+    "df_long_trips_groups_merged = df_long_trips_groups_count.join(df_long_trips_groups_avg,on='p_count') \\\n",
+    "#    .withColumn('long_trip_proportion',f.col('long_trip_count')/f.sum('long_trip_count'))\n",
+    "\n",
+    "df_long_trips_groups_merged.show(10)\n",
+    "\n",
+    "#df_short_trips_group_merged.show(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 255,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "536e783b1ad94294a3feffaef90339d1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FloatProgress(value=0.0, bar_style='info', description='Progress:', layout=Layout(height='25px', width='50%'),…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------------+\n",
+      "|sum(p_count)|\n",
+      "+------------+\n",
+      "|          45|\n",
+      "+------------+"
+     ]
+    }
+   ],
+   "source": [
+    "df_sum_short_trip = df_short_trips_group_merged.groupBy().sum('p_count').show()\n",
+    "df_sum_short_trip"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#df_long_trips_groups = df.where(f.col('trip_distance') >= 30 ).select('p_count','trip_distance') \\"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 245,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "de36b66bc9a741f19d2b46417ac542c4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FloatProgress(value=0.0, bar_style='info', description='Progress:', layout=Layout(height='25px', width='50%'),…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      " |-- p_count: integer (nullable = true)\n",
+      " |-- short_trip_count: long (nullable = false)"
+     ]
+    }
+   ],
+   "source": [
+    "df_short_trips_group_merged.printSchema()\n",
+    "df_short_trips_group_merged.select('short_trip_count').collect().read\n",
+    "#df_sum_short_trip = df_short_trips_group_merged.withColumn('rate_short_trip_count',f.col('short_trip_count')/f.sum('short_trip_count'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 251,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0d34628fa1a441cd82409e1ab9f90fa9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FloatProgress(value=0.0, bar_style='info', description='Progress:', layout=Layout(height='25px', width='50%'),…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "can only concatenate tuple (not \"int\") to tuple\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/usr/lib/spark/python/lib/pyspark.zip/pyspark/rdd.py\", line 846, in reduce\n",
+      "    return reduce(f, vals)\n",
+      "  File \"/usr/lib/spark/python/lib/pyspark.zip/pyspark/util.py\", line 113, in wrapper\n",
+      "    return f(*args, **kwargs)\n",
+      "TypeError: can only concatenate tuple (not \"int\") to tuple\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "cc = df_short_trips_group_merged.select('short_trip_count').rdd.map(lambda x:x).reduce(sum)\n",
+    "cc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 246,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d56abb8e071a4ef68681431c34eaa4a3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FloatProgress(value=0.0, bar_style='info', description='Progress:', layout=Layout(height='25px', width='50%'),…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Row(sum(short_trip_count)=5775086)]"
+     ]
+    }
+   ],
+   "source": [
+    "df_short_trips_group_merged.groupBy().sum('short_trip_count').collect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def diff_short_long_trip_on(attr, kind='bar'):\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def diff_short_long_trip_on(attr, kind='bar'):\n",
+    "    df_q3_short = pd.read_sql_query('SELECT '+attr+', count(*) as count \\\n",
+    "                                    FROM table_record \\\n",
+    "                                    WHERE trip_distance < 30 \\\n",
+    "                                    GROUP BY '+attr, nyc_database)\n",
+    "    df_q3_long = pd.read_sql_query('SELECT '+attr+', avg(trip_distance) AS AVG_trip_distance, count(*) as count \\\n",
+    "                                    FROM table_record \\\n",
+    "                                    WHERE trip_distance >= 30 \\\n",
+    "                                    GROUP BY '+attr, nyc_database)\n",
+    "#    if rpr == \"proportion\":\n",
+    "    s = np.sum(df_q3_short['count'].values)\n",
+    "    df_q3_short['proportion'] = [float(x)/s for x in df_q3_short['count']]\n",
+    "    s = np.sum(df_q3_long['count'].values)\n",
+    "    df_q3_long['proportion'] = [float(x)/s for x in df_q3_long['count']]\n",
+    "    \n",
+    "    df_q3 = df_q3_short.merge(df_q3_long, on=attr, suffixes=[\"_short\", \"_long\"]) \\\n",
+    "                        .rename(columns={rpr+\"_short\":\"short trips\", rpr+\"_long\":\"long trips\"}) \n",
+    "    \n",
+    "    ax = df_q3.plot(x=attr, y=['short trips', 'long trips'], kind=kind, figsize=(15,5))\n",
+    "    ax.set_ylabel(proportion)\n",
+    "    ax.set_title(attr.replace(\"_\", \" \")+\" difference in short/long trip\")\n",
+    "\n",
+    "    \n",
+    "for attr in ['p_count', 'RatecodeID', 'payment_type']:\n",
+    "    diff_short_long_trip_on(attr,kind='bar')"
    ]
   },
   {
