--- a/first notebook.ipynb
+++ b/first notebook.ipynb
@@ -4,15 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hello world\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"hello world\")"
    ]
@@ -20,7 +12,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -178,7 +172,7 @@
     {
      "data": {
       "text/plain": [
-       "'D:\\\\Honeywell'"
+       "'D:\\\\Eamon\\\\BBair的云文档\\\\Eamon\\\\bigdata\\\\jupyter-notebook\\\\starter'"
       ]
      },
      "execution_count": 3,
@@ -188,6 +182,60 @@
    ],
    "source": [
     "%pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Exception reporting mode: Verbose\n"
+     ]
+    }
+   ],
+   "source": [
+    "%xmode"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%system"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python 3.8.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "!python --version"
    ]
   },
   {
