--- a/ETL-with-spark_2.ipynb
+++ b/ETL-with-spark_2.ipynb
@@ -164,7 +164,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### prepare 1 : download target raw files from publics nyc tlc website https://www1.nyc.gov/site/tlc/about/tlc-trip-record-data.page"
+    "#### prepare 1 : \n",
+    "\n",
+    "download target raw files from publics nyc tlc website https://www1.nyc.gov/site/tlc/about/tlc-trip-record-data.page"
    ]
   },
   {
@@ -4500,18 +4502,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "PySpark",
-   "language": "",
-   "name": "pysparkkernel"
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
-    "name": "python",
-    "version": 2
+    "name": "ipython",
+    "version": 3
    },
+   "file_extension": ".py",
    "mimetype": "text/x-python",
-   "name": "pyspark",
-   "pygments_lexer": "python2"
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
